# lokum

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  lokum.py  pyproject.toml
.serena/: project.yml
alembic/: env.py
alembic/versions/: 5036af908fac_add_users_queries_and_error_fields.py  e7af82dec41a_add_offers_models.py  ecbc5f2f8d2f_add_offer_raw_infos_and_extend_offers.py
src/: app.py  auth.py  scheduler.py
src/base/: db.py  dependencies.py  maintenance.py  models.py  schemas.py
src/offer/: consolidation.py  models.py  price.py  resolver.py
src/query/: executor.py  models.py  router.py
src/scraping/: __init__.py  interface.py  pipeline.py
src/scraping/enrichment/: __init__.py  langchain_engine.py  models.py  prompts.py
src/scraping/olx/: scrape.py  search.py
src/user/: models.py
tests/: conftest.py
tests/fixtures/: olx_offer.html  olx_offer_wola.html  olx_search.html
tests/integration/query/: test_execute_query.py
tests/unit/: test_scheduler.py
tests/unit/api/: test_auth.py  test_router.py
tests/unit/offer/: test_consolidation.py
tests/unit/query/: test_executor.py
tests/unit/scraping/: test_pipeline.py
tests/unit/scraping/olx/: test_scrape.py  test_search.py
