[project]
name = "lokum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "asyncio>=4.0.0",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1,<1.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.1.0b1",
]
