[project]
name = "lokum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "apscheduler>=3.10",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115",
    "httpx>=0.28.1,<1.0",
    "mypy>=1.19.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.1.0b1",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.*"]
ignore_missing_imports = true
